--- a/PIDev_java/src/UI/UI_User/UserAfficheBack.fxml
+++ b/PIDev_java/src/UI/UI_User/UserAfficheBack.fxml
@@ -97,6 +97,30 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
+                  <Button fx:id="comptes11" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="308.0" mnemonicParsing="false" onAction="#goToQuiz" prefHeight="42.0" prefWidth="218.0" style="-fx-background-color: #5a727e;" styleClass="colo" text="Quizes" underline="true">
+                     <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../GUI/Icons/icons8_male_user_26px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <padding>
+                        <Insets left="50.0" />
+                     </padding>
+                  </Button>
+                  <Button fx:id="comptes111" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#goToQuiz" prefHeight="42.0" prefWidth="218.0" style="-fx-background-color: #5a727e;" styleClass="colo" text="Offre" underline="true">
+                     <graphic>
+                        <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../GUI/Icons/icons8_male_user_26px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <padding>
+                        <Insets left="50.0" />
+                     </padding>
+                  </Button>
                   <Button fx:id="logout" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#logout" prefHeight="42.0" prefWidth="327.0" style="-fx-background-color: #5a727e;" text="Se deconnecter" underline="true">
                      <graphic>
                         <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
