--- a/PIDev_java/src/UI/UI_formation/Formations.fxml
+++ b/PIDev_java/src/UI/UI_formation/Formations.fxml
@@ -4,56 +4,27 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="462.0" prefWidth="765.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.OffreFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="797.0" prefWidth="1073.0" style="-fx-background-color: #f7f3e9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.FormationsController">
    <children>
-      <ListView fx:id="offreListe" layoutX="192.0" layoutY="117.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="351.0" prefWidth="573.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="117.0" />
-      <Pane layoutX="192.0" layoutY="47.0" opacity="0.89" prefHeight="70.0" prefWidth="649.0" style="-fx-background-color: #ad0505;" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <HBox layoutX="6.0" layoutY="22.0" prefHeight="41.0" prefWidth="513.0">
-               <children>
-                  <TextField alignment="BASELINE_LEFT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="30.0" prefWidth="200.0" promptText="Recherche" HBox.hgrow="NEVER">
-                     <HBox.margin>
-                        <Insets left="15.0" />
-                     </HBox.margin>
-                     <padding>
-                        <Insets left="30.0" />
-                     </padding>
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </TextField>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="53.0" style="-fx-background-color: #ad0505;">
-                     <graphic>
-                        <FontAwesomeIconView fill="#fffefe" glyphName="SEARCH" wrappingWidth="24.6328125" />
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
-      </Pane>
-      <HBox alignment="CENTER_RIGHT" layoutX="568.0" layoutY="57.0" prefHeight="49.0" prefWidth="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="57.0">
-         <children>
-            <Button mnemonicParsing="false" onMouseClicked="#refreshData" style="-fx-background-color: #ad0505;">
-               <graphic>
-                  <FontAwesomeIconView fill="#fcf8f8" glyphName="REFRESH" />
-               </graphic>
-            </Button>
-            <Button contentDisplay="CENTER" mnemonicParsing="false" style="-fx-background-color: #ad0505;" textAlignment="JUSTIFY" textOverrun="CENTER_ELLIPSIS">
-               <graphic>
-                  <FontAwesomeIconView fill="#fffefe" glyphName="PLUS" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#addOffre" size="14.0" text=" " textAlignment="JUSTIFY" wrappingWidth="18.91148853302002" />
-               </graphic>
-            </Button>
-         </children>
-      </HBox>
-      <VBox layoutX="2.0" prefHeight="481.0" prefWidth="190.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane layoutX="281.0" layoutY="201.0" prefHeight="594.0" prefWidth="791.0">
+         <content>
+            <VBox fx:id="VBox_formations" alignment="CENTER" prefHeight="596.0" prefWidth="793.0" style="-fx-background-color: #f7f3e9;" />
+         </content>
+      </ScrollPane>
+      <Label layoutX="545.0" layoutY="108.0" prefHeight="51.0" prefWidth="257.0" text="Nos Formations" textFill="#ff1818">
+         <font>
+            <Font size="35.0" />
+         </font>
+      </Label>
+      <FontAwesomeIconView glyphName="CLOSE" layoutX="1028.0" layoutY="40.0" onMouseClicked="#btn_close" size="30" />
+      <Button fx:id="id_btn_voir_liste" alignment="CENTER" contentDisplay="CENTER" layoutX="880.0" layoutY="67.0" mnemonicParsing="false" onAction="#btn_voir_liste" prefHeight="19.0" prefWidth="148.0" style="-fx-background-color: #ad0505; -fx-background-radius: 15px;" text="Voir votre liste" textFill="WHITE" />
+      <VBox layoutX="22.0" layoutY="29.0" prefHeight="797.0" prefWidth="268.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Pane prefHeight="94.0" prefWidth="183.0">
                <children>
@@ -128,7 +99,7 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="USER" size="14.0" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#formation" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Formation" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#formation" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Formation" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
                </graphic>
@@ -139,7 +110,7 @@
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#apropos" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="A porpos" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#apropos" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="A porpos" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="BOOK" size="14.0" />
                </graphic>
